@@ -1,15 +1,15 @@
 buildscript {
 	ext {
-		kotlinVer = '1.1.3-2'
-		springBootVer = '1.5.6.RELEASE'
-		kotlinLoggingVer = '1.4.5'
+		kotlinVer = '1.1.51'
+		springBootVer = '1.5.8.RELEASE'
+		kotlinLoggingVer = '1.4.6'
 
-		thymeleafVer = '3.0.6.RELEASE'
+		thymeleafVer = '3.0.9.RELEASE'
 
-		icu4jVer = '59.1'
+		icu4jVer = '60.1'
 
-		okHttpVer = '3.8.0'
-		jsonPathVer = '2.2.0'
+		okHttpVer = '3.9.0'
+		jsonPathVer = '2.4.0'
 
 		propdepsPluginVer = '0.0.10.RELEASE'
 		versionPluginVer = '0.15.0'
@@ -114,16 +114,17 @@ bootRepackage.mustRunAfter clean
 
 // https://github.com/palantir/gradle-docker
 // gradle docker
-
-docker() {
+docker {
 	dependsOn jar, bootRepackage
-	name 'oauth2-app'
+	name 'app'
 	tags 'latest'
-	files tasks.jar.outputs
+	files jar.outputs
 	dockerfile file('src/main/docker/Dockerfile')
 	buildArgs([
-		PORT     : '8081',
-		JAVA_OPTS: '-Xms64m -Xmx128m'
+		JAVA_OPTS: '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap',
+		PORT     : "8080"
 	])
 	pull true
 }
+
+task stage(dependsOn: ['build', 'clean'])
